# lab07

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: actions.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_logs/polly/clang-cxx14/: log.txt
cmake/Hunter/: config.cmake
demo/: main.cpp
reports/lab02/: REPORT.md
reports/lab07/: REPORT.md
tests/: test1.cpp
